integration_tests/tests/integration_tests/snapshots/integration_tests__mpl_core_tests__mpl_core_autograph_plugin_with_signature.snap
---
source: integration_tests/tests/integration_tests/mpl_core_tests.rs
assertion_line: 516
expression: response
---
{
  "interface": "MplCoreAsset",
  "id": "4MCuZ5WNCgFnb7YJ2exj34qsLscmwd23WcoLBXBkaB7d",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/asset",
    "files": [],
    "metadata": {
      "name": "Test Asset",
      "symbol": ""
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "ACxrDWeCPic6voU6a8vyadpL8nSW15Un5vT76LDpxD4N"
  },
  "mutable": true,
  "burnt": false,
  "plugins": {
    "autograph": {
      "data": {
        "signatures": [
          {
            "address": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7",
            "message": "hi"
          }
        ]
      },
      "index": 0,
      "offset": 119,
      "authority": {
        "type": "Owner",
        "address": null
      }
    }
  },
  "mpl_core_info": {
    "plugins_json_version": 1
  },
  "external_plugins": [],
  "is_agent": false,
  "asset_signer": "ChVGM1nejRwi2bYAMY3KH48aDTeo7UdZC5vWLWFFjxvp"
}
