integration_tests/tests/integration_tests/snapshots/integration_tests__mpl_core_tests__mpl_core_get_asset_with_app_data_with_binary_data_and_owner_is_data_authority.snap
---
source: integration_tests/tests/integration_tests/mpl_core_tests.rs
assertion_line: 603
expression: response
---
{
  "interface": "MplCoreAsset",
  "id": "6tqX4RuPCoD9dVKEJ51jykwBwjKh6runcHJSuSHpDPJU",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/asset",
    "files": [],
    "metadata": {
      "name": "Test Asset",
      "symbol": ""
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "HKwwF4sPVYFPgqEgxth4GZRZjJ9o4E3wA8eu2QM5Vt3H"
  },
  "mutable": true,
  "burnt": false,
  "plugins": {},
  "mpl_core_info": {
    "plugins_json_version": 1
  },
  "external_plugins": [
    {
      "data": "SGVsbG8sIHdvcmxkIQ==",
      "type": "AppData",
      "index": 0,
      "offset": 119,
      "data_len": 13,
      "authority": {
        "type": "UpdateAuthority",
        "address": null
      },
      "data_offset": 122,
      "adapter_config": {
        "schema": "Binary",
        "data_authority": {
          "type": "Owner",
          "address": null
        }
      }
    }
  ],
  "is_agent": false,
  "asset_signer": "Ahd8iYEjMf3Ykr7WQ7nArNYvpCVQWGvtHHuj6em61yep"
}
