integration_tests/tests/integration_tests/snapshots/integration_tests__mpl_core_tests__mpl_core_get_asset_with_data_section_with_binary_data.snap
---
source: integration_tests/tests/integration_tests/mpl_core_tests.rs
assertion_line: 721
expression: response
---
{
  "interface": "MplCoreAsset",
  "id": "BVjK8uvqUuH5YU6ThX6A7gznx2xi8BxshawbuFe1Y5Vr",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/asset",
    "files": [],
    "metadata": {
      "name": "Test Asset",
      "symbol": ""
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [
    {
      "group_key": "collection",
      "group_value": "41thppJ4z9HnBNbFMLnztXS7seqBptYV1jG8UhxR4vK8"
    }
  ],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "HKwwF4sPVYFPgqEgxth4GZRZjJ9o4E3wA8eu2QM5Vt3H"
  },
  "mutable": true,
  "burnt": false,
  "plugins": {},
  "mpl_core_info": {
    "plugins_json_version": 1
  },
  "external_plugins": [
    {
      "data": "SGVsbG8sIHdvcmxkIQ==",
      "type": "DataSection",
      "index": 0,
      "offset": 119,
      "data_len": 13,
      "authority": {
        "type": "None",
        "address": null
      },
      "data_offset": 155,
      "adapter_config": {
        "schema": "Binary",
        "parent_key": {
          "linked_app_data": {
            "type": "Address",
            "address": "CYHj4vYrPnuQ1pyqrjeRBJJ4QA4LfyoFaaRgSow16Ziw"
          }
        }
      }
    }
  ],
  "is_agent": false,
  "asset_signer": "7ZkhX1T5cnHp2GDva8ar4YnHFJakApr73sLGXjn18zxb"
}
